[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leasedkeyq"
version = "0.1.0"
description = "Async keyed leased queue with FIFO semantics and O(1) operations"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["asyncio", "queue", "lease", "fifo", "async"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "radon>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/leasedkeyq"
Documentation = "https://github.com/yourusername/leasedkeyq/blob/main/README.md"
Repository = "https://github.com/yourusername/leasedkeyq"
Issues = "https://github.com/yourusername/leasedkeyq/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/leasedkeyq"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--cov=leasedkeyq",
    "--cov-report=term-missing",
    "--cov-report=html",
]
asyncio_mode = "auto"
